fix: slider work

--- a/promo/index.html
+++ b/promo/index.html
@@ -10,11 +10,13 @@
     <section class="slider">
       <button class="slider__prev-button">
       </button>
-      <div class="slider__slide1 slider_show">
-      </div>
-      <div class="slider__slide2">
-      </div>
-      <div class="slider__slide3">
+      <div class="slide-container">
+        <div class="slide-container__slide1 slider_show">
+        </div>
+        <div class="slide-container__slide2">
+        </div>
+        <div class="slide-container__slide3">
+        </div>
       </div>
       <button class="slider__next-button">
       </button>
