feat: add mobile layout

--- a/promo/index.html
+++ b/promo/index.html
@@ -11,11 +11,11 @@
       <button class="slider__prev-button">
       </button>
       <div class="slide-container">
-        <div class="slide-container__slide1 slider_show">
+        <div class="slide-container__slide1 slider_show"><img src="assets/images/Slide1.png" alt="Slide 1">
         </div>
-        <div class="slide-container__slide2">
+        <div class="slide-container__slide2"><img src="assets/images/Slide2.png" alt="Slide 2">
         </div>
-        <div class="slide-container__slide3">
+        <div class="slide-container__slide3"><img src="assets/images/Slide3.png" alt="Slide 3">
         </div>
       </div>
       <button class="slider__next-button">
