--- a/promo/index.html
+++ b/promo/index.html
@@ -22,10 +22,10 @@
       </button>
     </section>
     <section class="info">
-      <div class="info__item1"><img src="assets/images/Star.png" alt="pic1"><h2>Con1</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p></div>
-      <div class="info__item2"><img src="assets/images/Star.png" alt="pic2"><h2>Con2</h2><p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p></div>
-      <div class="info__item3"><img src="assets/images/Star.png" alt="pic3"><h2>Con3</h2><p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p></div>
-      <div class="info__item4"><img src="assets/images/Star.png" alt="pic4"><h2>Con4</h2><p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p></div>
+      <div class="info__item1"><img src="assets/images/Star.png" alt="pic1"><h2>Con1</h2><p>Личный кабинет, позволяющий сохранить прогресс</p></div>
+      <div class="info__item2"><img src="assets/images/Star.png" alt="pic2"><h2>Con2</h2><p>Методика интервального повторения изучаемых слов для закрепления в памяти</p></div>
+      <div class="info__item3"><img src="assets/images/Star.png" alt="pic3"><h2>Con3</h2><p>Познавательные мини-игры, позволяющие расширить словарный запас</p></div>
+      <div class="info__item4"><img src="assets/images/Star.png" alt="pic4"><h2>Con4</h2><p>Статистика для отслеживания прогресса</p></div>
       <div class="info__item5"><img src="assets/images/Star.png" alt="pic5"><h2>Con5</h2><p>No one rejects, dislikes, or avoids pleasure itself, because it is pleasure</p></div>
       <div class="info__item6"><img src="assets/images/Star.png" alt="pic6"><h2>Con6</h2><p>To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it</p></div>
     </section>
