fix: update config files

--- a/promo/index.html
+++ b/promo/index.html
@@ -23,7 +23,7 @@
     </section>
     <section class="info">
       <div class="info__item1"><img src="assets/images/Star.png" alt="pic1"><h2>Con1</h2><p>Личный кабинет, позволяющий сохранить прогресс</p></div>
-      <div class="info__item2"><img src="assets/images/Star.png" alt="pic2"><h2>Con2</h2><p>Методика интервального повторения изучаемых слов для закрепления в памяти</p></div>
+      <div class="info__item2"><img src="assets/images/Star.png" alt="pic2"><h2>Con2</h2><p>Методика интервального повторения для закрепления в памяти изучаемых слов</p></div>
       <div class="info__item3"><img src="assets/images/Star.png" alt="pic3"><h2>Con3</h2><p>Познавательные мини-игры, позволяющие расширить словарный запас</p></div>
       <div class="info__item4"><img src="assets/images/Star.png" alt="pic4"><h2>Con4</h2><p>Статистика для отслеживания прогресса</p></div>
       <div class="info__item5"><img src="assets/images/Star.png" alt="pic5"><h2>Con5</h2><p>No one rejects, dislikes, or avoids pleasure itself, because it is pleasure</p></div>
