--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    	<title>RS Lang</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
@@ -10,5 +10,5 @@
     <header></header>
     <main></main>
     <footer></footer>
-  </body>
+    </body>
 </html>
