feat: add new class GameWord

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main id="main"></main>
     <footer></footer>
     </body>
 </html>
