--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
     <header></header>
     <section class="message d-none"></section>
     <main></main>
-    <footer></footer>
+    <footer class="footer"></footer>
     </body>
 </html>
