--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header></header>
-    <section class="message d-none"></section>
+    <section class="message"></section>
     <main></main>
     <footer class="footer"></footer>
     </body>
