--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   </head>
   <body>
-    <header></header>
+    <header class="header"></header>
     <section class="message"></section>
     <main id="main"></main>
     <footer class="footer"></footer>
