--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <main id="main"></main>
+  <header class="header"></header>
+  <section class="message"></section>
+  <main id="main"></main>
+  <footer class="footer"></footer>
   </body>
 </html>
